--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,12 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
+      <a class="btn" href="#">About</a>
+      <a class="btn" href="#">Philosophy & Vision</a>
+      <a class="btn" href="#">Themes & Research</a>
+      <a class="btn" href="#">Projects</a>
+      <a class="btn" href="#">Contact</a>
+      
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
