--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
+      <a href="http://www.forum.psychi.uk" class="btn">Forum</a>
       <a class="btn" href="#">About</a>
       <a class="btn" href="#">Philosophy & Vision</a>
       <a class="btn" href="#">Themes & Research</a>
